Removido o @Inject para a injeção de dependencias